# da_lab6

./: CMakeLists.txt  Makefile  big_integer.cpp  big_integer.hpp  big_integer_tools.cpp  big_integer_tools.hpp  main.cpp  wrapper.sh
test/: GTestCalc.cpp
